--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  # ビルドコマンド
-  command = "npm run build"
+  # 依存関係のインストール
+  command = "npm install && npm run build"
   # 公開ディレクトリ
   publish = "dist"
 
